<resources>
    <string name="app_name">EdenSight</string>
    // Standard Text
    <string name="view_details">View Details</string>
    <string name="placeholder">Placeholder</string>

    // Used in Login Page
    <string name="app_logo">Application Logo</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>

    // Used in Landing Page (Resident List)
    <string name="search_text">Search by Name</string>

    // Used in Resident View Holder
    <string name="person_bpm">BPM:\u0020</string>
    <string name="person_spo2">SpO2:\u0020</string>

    // Used in Details (General) Fragment
    <string name="general_graph_title">Beats per Minute over 6 previous points in time</string>

    // Used in Details (Detailed) Fragment
    <string name="resident_name">Resident Name</string>
    <string name="resident_caretaker">Caretaker</string>
    <string name="resident_roomNo">Room Number</string>
    <string name="resident_gender">Gender</string>
    <string name="resident_dob">Date of birth</string>
    <string name="resident_ic">IC No.</string>
    <string name="resident_nation">Nationality</string>
    <string name="resident_phoneNo">Resident\'s Tel.</string>
    <string name="resident_guardian">Guardian\'s Name</string>
    <string name="resident_emergency">Emergency Tel.</string>
    <string name="resident_streetAddr1">Street Address 1</string>
    <string name="resident_streetAddr2">Street Address 2</string>
    <string name="resident_postal">Postal</string>
    <string name="resident_city">City</string>
    <string name="resident_state">State</string>

    // Used in Details (Health) Fragment
    <string name="health_weight">Weight (kg)</string>
    <string name="health_height">Height (cm)</string>
    <string name="health_blood">Blood Type</string>
    <string name="health_conditions">Health Conditions</string>
    <string name="health_allergies">Allergies</string>
    <string name="health_medication">Medication</string>

    // Used in Details (History) Fragment
    <string name="history_avg_bpm">BPM</string>
    <string name="history_avg_spo2">SpO2</string>
    <string name="history_date">Date</string>
    <string name="history_time">Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
