<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBackground"
    tools:context=".Login"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@id/login_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eden_logo" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:autofillHints="@string/login_username"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/login_guideline"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:autofillHints="@string/login_password"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        app:layout_constraintTop_toBottomOf="@id/usernameInput" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/login_button"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>