<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResidentHealthFragment"
    android:background="@android:color/white">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/health_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45"/>

            <TextView
                android:id="@+id/health_weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_weight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/health_height_title"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/health_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintLeft_toRightOf="@id/health_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/health_height"
                android:layout_marginStart="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/health_height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_height"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/health_weight_title"
                app:layout_constraintBottom_toTopOf="@id/health_blood_title"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/health_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintLeft_toRightOf="@id/health_guideline"
                app:layout_constraintTop_toBottomOf="@id/health_weight"
                app:layout_constraintBottom_toTopOf="@id/health_blood"
                android:layout_marginStart="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/health_blood_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_blood"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/health_height_title"
                app:layout_constraintBottom_toTopOf="@id/health_conditions_title"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/health_blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintLeft_toRightOf="@id/health_guideline"
                app:layout_constraintTop_toBottomOf="@id/health_height"
                app:layout_constraintBottom_toTopOf="@id/health_conditions_title"
                android:layout_marginStart="10dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/health_conditions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_conditions"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/health_blood_title"
                app:layout_constraintBottom_toTopOf="@id/health_conditions"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/health_conditions"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:layout_constraintTop_toBottomOf="@id/health_conditions_title"
                app:layout_constraintBottom_toTopOf="@id/health_allergies_title"
                android:divider="@color/greenWording"
                android:dividerHeight="1dp"/>

            <TextView
                android:id="@+id/health_allergies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_allergies"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/health_conditions"
                app:layout_constraintBottom_toTopOf="@id/health_allergies"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/health_allergies"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:layout_constraintTop_toBottomOf="@id/health_allergies_title"
                app:layout_constraintBottom_toTopOf="@id/health_mediation_title"
                android:divider="@color/greenWording"
                android:dividerHeight="1dp"/>

            <TextView
                android:id="@+id/health_mediation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_medication"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/health_allergies"
                app:layout_constraintBottom_toTopOf="@id/health_medication"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/health_medication"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:layout_constraintTop_toBottomOf="@id/health_mediation_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:divider="@color/greenWording"
                android:dividerHeight="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>