<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResidentDetailedFragment"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/detailed_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/resident_detailed_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_caretaker_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_caretaker_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_caretaker"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_name_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_room_number_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_room_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_roomNo"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_caretaker_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_gender_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_gender"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_room_number_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_dob_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_dob_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_dob"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_gender_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_ic_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_ic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_ic"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_dob_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_nation_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_nation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_nation"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_ic_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_phone_number_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_phoneNo"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_nation_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_guardian_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_guardian_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_guardian"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_phone_number_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_emergency_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_emergency_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_emergency"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_guardian_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_streetAddr1_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_streetAddr1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_streetAddr1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_emergency_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_streetAddr2_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_streetAddr2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_streetAddr2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_streetAddr1_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_postal_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_postal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_postal"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_streetAddr2_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_city_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_city"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_postal_title"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_state_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/resident_detailed_state_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resident_state"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_city_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/resident_detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_caretaker"/>

            <TextView
                android:id="@+id/resident_detailed_caretaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_name"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_room_number"/>

            <TextView
                android:id="@+id/resident_detailed_room_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_caretaker"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_gender"/>

            <TextView
                android:id="@+id/resident_detailed_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_room_number"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_dob"/>

            <TextView
                android:id="@+id/resident_detailed_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_gender"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_ic"/>

            <TextView
                android:id="@+id/resident_detailed_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_dob"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_nation" />

            <TextView
                android:id="@+id/resident_detailed_nation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_ic"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_phone_number"/>

            <TextView
                android:id="@+id/resident_detailed_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_nation"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_guardian"/>

            <TextView
                android:id="@+id/resident_detailed_guardian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_phone_number"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_emergency"/>

            <TextView
                android:id="@+id/resident_detailed_emergency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_guardian"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_streetAddr1"/>

            <TextView
                android:id="@+id/resident_detailed_streetAddr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_emergency"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_streetAddr2"/>

            <TextView
                android:id="@+id/resident_detailed_streetAddr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_streetAddr1"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_postal"/>

            <TextView
                android:id="@+id/resident_detailed_postal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_streetAddr2"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_city"/>

            <TextView
                android:id="@+id/resident_detailed_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_postal"
                app:layout_constraintBottom_toTopOf="@id/resident_detailed_state"/>

            <TextView
                android:id="@+id/resident_detailed_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/detailed_guideline"
                app:layout_constraintTop_toBottomOf="@id/resident_detailed_city"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>